  newRho function.
- Bug fixed in grad.lambda
- checks and warning messages added to profile.clm
- a warning is now given if the profile fits do not converge
- profile.clm has grown the argument 'stepWarn', which gives a
  warning if the no. profile steps in each direction (up or down) is
  less than stepWarn (default 8), which indicates that the profile is
  unreliable.
- Bug in loglog-link for clmm fits fixed.
- Missing values are handled better in clm and clmm.
- clmm has grown an argument 'sdFixed' which assigns a fixed value of
  the standard deviation of the random effects. Optimization is
  performed with respect to the remaining parameters.
- profile.clmm, confint.profile.clmm and plot.profile.clmm are now
  available. Profiling is restricted to the standard deviation
  parameter of the random effects.
- control.clm and control.clmm now handles the control parameters.

2010-05-06:

- allowing the formulas to be constructed outside clm and clmm
  (the formulas are evaluated in the parent frame before the variable
  names are extracted)

2010-05-17:

- Better evaluation in case of non-standard formula usage allowing
  e.g. clm(data$y ~ data$x).
- Better handling of ill-defined variance-covariance matrix of the
  parameters in summary methods for clm and clmm objects.

2010-06-12:

- Standard Gauss-Hermite quadrature is now available via the nAGQ
  argument to clmm.
- Core functions implemented in C for speed. This includes all link
  functions, update of the conditional modes of the random effects,
  adaptive Gauss-Hermite quadrature and standard, i.e. non-adaptive
  Gauss-Hermite quadrature. Select R or C implementation via the
  argument doFit to clmm.
- Bug in random effects estimates and their conditional modes
  corrected. 

2010-07-06:

- Bug in predict when 'newdata' was supplied is now corrected.

2010-07-23:

- Better descriptions of random effect estimates and fitted values in
  the clmm help page.